--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "deep-rainforest",
   "displayName": "Deep Rainforest",
   "version": "0.0.1",
-  "description": "",
+  "description": "Explore a deep rainforest of code with lush green hues and serene blue undertones with this VS Code theme.",
   "categories": [
     "Themes"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yeskunall/deep-rainforest"
+  },
+  "license": "MIT",
   "contributes": {
     "themes": [
       {
@@ -23,5 +28,6 @@
   },
   "engines": {
     "vscode": "^1.80.0"
-  }
+  },
+  "icon": "icon.png"
 }
